ticketing/infra/k8s/auth-depl.yaml
apiVersion: apps/v1      # 使用kubectl api-versions 查看cluster支持的版本
kind: Deployment
metadata:
  name: auth-depl
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:              #pod的模版
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: caldevens/auth 
---
apiVersion: v1
kind: Service
metadata:
  name: auth-srv
spec: 
  selector:
    app: auth
  type: ClusterIP
  ports: 
    - name: auth
      protocol: TCP
      port: 3000
      targetPort: 3000
